--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "body-parser": "^1.15.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "isomorphic-fetch": "2.2.1",
+    "lodash": "4.13.1",
+    "mongoose": "4.4.19"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
